Some usefull changes.